[gd_scene load_steps=8 format=3 uid="uid://drr84i03yyp7a"]

[ext_resource type="Texture2D" uid="uid://dyu8p6ye0tkce" path="res://Assets/Backgrounds/EscenaAscensor-03-Puerta Izquierda.png" id="1_oeerb"]
[ext_resource type="Script" path="res://Elevator.gd" id="1_ypceq"]
[ext_resource type="Texture2D" uid="uid://cf4ilowwfakri" path="res://Assets/Backgrounds/EscenaAscensor-04-Puerta Derecha.png" id="2_m2d62"]
[ext_resource type="Texture2D" uid="uid://mcuhy3t1w6vh" path="res://Assets/Backgrounds/EscenaAscensor-02-Salida Correcta.png" id="2_r03s8"]
[ext_resource type="Texture2D" uid="uid://cn7an6jkphcpd" path="res://Assets/Backgrounds/EscenaAscensor-01.png" id="3_cak52"]
[ext_resource type="Script" path="res://Button.gd" id="3_us5gk"]
[ext_resource type="AudioStream" uid="uid://3i1cg0pkw65j" path="res://Assets/SFX/Menu.wav" id="3_v0pwa"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ypceq")

[node name="EscenaAscensor-02-salidaCorrecta" type="Sprite2D" parent="."]
position = Vector2(578, 330)
scale = Vector2(0.94, 0.94)
texture = ExtResource("2_r03s8")

[node name="LeftDoor" type="Sprite2D" parent="."]
position = Vector2(577, 330)
scale = Vector2(0.94, 0.94)
texture = ExtResource("1_oeerb")

[node name="RightDoor" type="Sprite2D" parent="."]
position = Vector2(577, 331)
scale = Vector2(0.94, 0.94)
texture = ExtResource("2_m2d62")

[node name="EscenaAscensor-01" type="Sprite2D" parent="."]
position = Vector2(577, 330)
scale = Vector2(0.94, 0.94)
texture = ExtResource("3_cak52")

[node name="WheelchairButton" type="TextureButton" parent="."]
offset_left = 866.0
offset_top = 292.0
offset_right = 942.0
offset_bottom = 433.0
scale = Vector2(0.355082, 0.355082)
script = ExtResource("3_us5gk")

[node name="CrutchesButton" type="TextureButton" parent="."]
offset_left = 897.0
offset_top = 292.0
offset_right = 973.0
offset_bottom = 433.0
scale = Vector2(0.355082, 0.355082)
script = ExtResource("3_us5gk")

[node name="EndingButton" type="TextureButton" parent="."]
offset_left = 929.0
offset_top = 292.0
offset_right = 1005.0
offset_bottom = 433.0
scale = Vector2(0.355082, 0.355082)
script = ExtResource("3_us5gk")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_v0pwa")
autoplay = true

[connection signal="pressed" from="WheelchairButton" to="." method="open_doors" binds= ["ESCENA8"]]
[connection signal="pressed" from="CrutchesButton" to="." method="open_doors" binds= ["ESCENA9"]]
[connection signal="pressed" from="EndingButton" to="." method="open_doors" binds= ["ESCENA10"]]
